Add getCountry endpoint
