# Countries.Server/Controllers/CountryController.cs
@@ -1,3 +1,4 @@
+using Countries.Server.Models;
 using Countries.Server.Models.DTOs;
 using Countries.Server.Services;
 using Microsoft.AspNetCore.Mvc;
@@ -5,7 +6,7 @@ using Microsoft.AspNetCore.Mvc;
 namespace Countries.Server.Controllers
 {
     [ApiController]
-    [Route("country")]
+    [Route("api/countries")]
     public class CountryController : ControllerBase
     {
         private readonly ICountryService _countryService;
@@ -17,11 +18,18 @@ namespace Countries.Server.Controllers
             _logger = logger;
         }
 
-        [HttpGet(Name = "GetCountries")]
+        [HttpGet("", Name = "GetCountries")]
         public async Task<GetCountriesResponse> GetCountries([FromQuery] GetCountriesRequest getCountriesRequest)
         {
             _logger.LogInformation("Start to get countries");
            return await _countryService.GetCountries(getCountriesRequest);
+        }
+
+        [HttpGet("{countryName}", Name = "GetCountry")]
+        public async Task<Country> GetCountry(string countryName)
+        {
+            _logger.LogInformation("Start to get countries");
+            return await _countryService.GetCountry(countryName);
         }
     }
 }
