# Countries.Server/Services/CountryService.cs
@@ -1,4 +1,5 @@
-﻿using Countries.Server.Models.DTOs;
+﻿using Countries.Server.Models;
+using Countries.Server.Models.DTOs;
 using Countries.Server.Repositories;
 
 namespace Countries.Server.Services
@@ -15,6 +16,11 @@ namespace Countries.Server.Services
         public async Task<GetCountriesResponse> GetCountries(GetCountriesRequest getCountriesRequest)
         {
             return await _countryRepository.GetCountries(getCountriesRequest);
+        }
+
+        public async Task<Country> GetCountry(string countryName)
+        {
+            return await _countryRepository.GetCountry(countryName);
         }
     }
 }
